--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,15 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="colorPrimary">#CDF0EA</color>
+    <color name="colorLight">#F9F9F9</color>
+    <color name="colorSecondary">#F7DBF0</color>
+    <color name="colorSecondaryDark">#BEAEE2</color>
+
+    <array name="progress_gradient">
+        <item>#52a49d</item>
+        <item>#f4a261</item>
+        <item>#ce4257</item>
+    </array>
 </resources>
