--- a/app/src/main/res/layout/custom_dialogue_add_food.xml
+++ b/app/src/main/res/layout/custom_dialogue_add_food.xml
@@ -121,7 +121,7 @@
 
                 <Button
                     android:id="@+id/submit_food"
-                    android:layout_width="wrap_content"
+                    android:layout_width="80dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="300dp"
                     android:background="@null"
