--- a/app/src/main/res/layout/food_detail_dialogue.xml
+++ b/app/src/main/res/layout/food_detail_dialogue.xml
@@ -71,7 +71,11 @@
                         android:id="@+id/subtract_food_amount_button"
                         android:layout_width="25dp"
                         android:layout_height="25dp"
-                        android:src="@drawable/substract_button"/>
+                        android:layout_marginTop="0dp"
+                        android:layout_marginLeft="0dp"
+                        android:layout_marginBottom="0dp"
+                        android:layout_marginRight="0dp"
+                        android:src="@drawable/ic_baseline_remove_circle"/>
 
                     <TextView
                         android:layout_gravity="bottom"
@@ -91,7 +95,7 @@
                         android:id="@+id/add_food_amount_button"
                         android:layout_width="25dp"
                         android:layout_height="25dp"
-                        android:src="@drawable/add_button"/>
+                        android:src="@drawable/ic_baseline_add_circle"/>
 
                 </LinearLayout>
 
@@ -123,7 +127,7 @@
 
                 <Button
                     android:id="@+id/delete_food"
-                    android:layout_width="80dp"
+                    android:layout_width="110dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="300dp"
                     android:background="@null"
