--- a/app/src/main/res/layout/food_gric_cell.xml
+++ b/app/src/main/res/layout/food_gric_cell.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/food_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
