--- a/app/src/main/res/layout/fragment_food.xml
+++ b/app/src/main/res/layout/fragment_food.xml
@@ -17,6 +17,20 @@
 
     </GridView>
 
+    <ImageButton
+        android:id="@+id/camera_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_diaphragm"
+        android:layout_gravity="bottom|end"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:ignore="SpeakableTextPresentCheck"
+        android:focusable="true"
+        android:backgroundTint="@color/white"/>
+
     <Button
         android:id="@+id/add_food_button"
         android:layout_width="wrap_content"
@@ -33,4 +47,13 @@
         app:srcCompat="@android:drawable/ic_input_add"
         tools:ignore="SpeakableTextPresentCheck"
         android:focusable="true" />
+
+    <ImageView
+        android:id="@+id/image_view"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="300dp"
+        android:layout_marginRight="100dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
